--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,8 @@
             Заработать авторитет среди дворовых котов и даже собак? Серия
             Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a class="program-type-list__link" href="catalog.html#pro">каталог pro</a>
+          <a class="program-type-list__link
+          " href="catalog.html#pro">каталог pro</a>
         </li>
       </ul>
     </section>
@@ -133,7 +134,66 @@
       </ul>
     </section>
 
-    <article class="demonstration">
+    <section class="demonstration">
+      <div class="demonstration__header">
+        <h2>Живой пример</h2>
+      </div>
+      <div class="demonstration__wrapper">
+        <div class="demonstration__example">
+          <p class="demonstration__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat
+            Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему
+            спит по 16 часов в день.</p>
+          <ul class="demonstration__list">
+            <li class="demonstration__item">5 кг <small class="demonstration__legend">снижение веса</small></li>
+            <li class="demonstration__item">60 дней <small class="demonstration__legend">затрачено времени</small></li>
+          </ul>
+          <h3 class="demonstration__sub-title">Затраты на питание: <span>15 000 руб.</span></h3>
+        </div>
+        <div class="demonstration__image slide-image">
+          <div class="slide-image__wrapper">
+            <ul class="slide-image__list">
+              <li class="slide-image__item slide-image__item--active">
+                <picture>
+                  <!--[if IE 9]><video style="display: none;"><![endif]-->
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/before-desktop@1x.webp, img/before-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/before-tablet@1x.webp, img/before-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/before-mobile@1x.webp, img/before-mobile@2x.webp 2x">
+                  <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
+                  <!--[if IE 9]></video><![endif]--> <img class="slide-image__image" src="img/before-mobile@1x.png"
+                    srcset="img/before-mobile@2x.png 2x" width="311" height="232"
+                    alt="фото кота Бориса до приема Кэт Энерджи Slim"></picture>
+              </li>
+              <li class="slide-image__item">
+                <picture>
+                  <!--[if IE 9]><video style="display: none;"><![endif]-->
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/after-desktop@1x.webp, img/after-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/after-tablet@1x.webp, img/after-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/after-mobile@1x.webp, img/after-mobile@2x.webp 2x">
+                  <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
+                  <!--[if IE 9]></video><![endif]--> <img class="slide-image__image" src="img/after-mobile@1x.png"
+                    srcset="img/after-mobile@2x.png 2x" width="311" height="232"
+                    alt="фото кота Бориса после приема Кэт Энерджи Slim">
+                </picture>
+              </li>
+            </ul>
+            <div class="slide-image__buttons">
+              <div class="slide-image__toggle">
+                <div class="slide-image__toggle-btn">Бегунок слайдера</div>
+              </div><button class="slide-image__before" type="button">Было</button> <button class="slide-image__after"
+                type="button">Стало</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--<article class="demonstration">
       <h2 class="demonstration__title">Живой пример</h2>
       <div class="demonstration__wrapper">
         <div class="demonstration__wrapper-text">
@@ -167,14 +227,6 @@
             </p>
           </div>
         </div>
-        <!--<div class="img-comp-container">
-              <div class="img-comp-img">
-                <img src="img_snow.jpg" width="300" height="200">
-              </div>
-              <div class="img-comp-img img-comp-overlay">
-                <img src="img_forest.jpg" width="300" height="200">
-              </div>
-            </div>-->
         <div class="demonstation__slider">
           <div class="demonstation__slider demonstation__slider--before">
             <picture>
@@ -236,7 +288,7 @@
           </script>
         </div>
       </div>
-    </article>
+    </article>-->
 
 
     <section class="contact-us">
@@ -315,10 +367,14 @@
       </div>
       <div class="page-footer__copyright copyright">
         <p class="copyright__text">HTML Academy</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-          target="_blank">
-          <svg class="copyright__icon-htmlacademy" width="26.943" height="34.09">
-            <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="HTML Academy, HTML и CSS, уровень 2" target="_blank">
+          <svg class="copyright__htmlacademy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="35"
+            height="42">
+            <path fill="#666666" d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1
+              10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7
+              2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9
+              1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z" />
           </svg>
         </a>
       </div>
