исправляет проект по пиксельперфекту

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
 
 <body class="container">
 
-  <header class="page-header page-header--bg">
+  <header class="page-header">
     <a class="page-header__logo" href="#" aria-label="Логотип сайта Кэт энерджи, главная страница">
       <picture>
         <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg" width="203" height="60">
