--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
   </header>
 
   <main class="page-main">
-    <h1 class="page-main__title">Каталог продукции</h1>
+    <h1 class="page-main__title page-main__title--catalog">Каталог продукции</h1>
     <section class="main-products">
       <h2 class="main-products__title visually-hidden">Основные товары</h2>
       <ul class="main-products__list main-products-list">
@@ -561,10 +561,14 @@
       </div>
       <div class="page-footer__copyright copyright">
         <p class="copyright__text">HTML Academy</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-          target="_blank">
-          <svg class="copyright__icon-htmlacademy" width="26.943" height="34.09">
-            <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="HTML Academy, HTML и CSS, уровень 2" target="_blank">
+          <svg class="copyright__htmlacademy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="35"
+            height="42">
+            <path fill="#666666" d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1
+                    10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7
+                    2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9
+                    1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z" />
           </svg>
         </a>
       </div>
