--- a/source/form.html
+++ b/source/form.html
@@ -100,7 +100,7 @@
               <input class="contacts-request__user contacts-request__user--email" id="feedback-email" type="email"
                 name="feedback-email" placeholder="kuklachev@gmail.com" required="">
               <svg class="contacts-request__icon-email" width="18" height="14">
-                <use xlink:href="#icon-mail"></use>
+                <use xlink:href="img/sprite.svg#icon-mail"></use>
               </svg>
             </div>
             <div class="contacts-request__phone">
@@ -109,7 +109,7 @@
               <input class="contacts-request__user contacts-request__user--phone" id="feedback-phone" type="tel"
                 name="feedback-phone" placeholder="8 (960) 900-60-90" required="">
               <svg class="contacts-request__icon-phone" width="20" height="20">
-                <use xlink:href="#icon-phone"></use>
+                <use xlink:href="img/sprite.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
@@ -163,13 +163,9 @@
           </address>
         </div>
         <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
-          <!--<div style="position:relative;overflow:hidden;"><a
-                                  href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
-                                  style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a
-                                  href="https://yandex.ru/maps/2/saint-petersburg/?clid=2254922&ll=30.322740%2C59.938534&utm_medium=mapframe&utm_source=maps&z=19"
-                                  style="color:#eee;font-size:12px;position:absolute;top:14px;">Санкт‑Петербург — Яндекс.Карты</a><iframe
-                                  src="https://yandex.ru/map-widget/v1/-/CSVTJXm-" width="560" height="400" frameborder="1"
-                                  allowfullscreen="true" style="position:relative;"></iframe></div>-->
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab4f6043b3fef8a19740742b236bbfd79ef52920fda3041863dfe011bd153b11e&amp;source=constructor"
+          width="320" height="400"></iframe>
           <p>
             <picture>
               <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
@@ -201,7 +197,7 @@
                 class="visually-hidden">Кэт
                 энерджи в Вконтакте</span>
               <svg class="social__icon-vk" width="22" height="12">
-                <use xlink:href="#icon-vk"></use>
+                <use xlink:href="img/sprite.svg#icon-vk"></use>
               </svg>
             </a>
           </li>
@@ -209,7 +205,7 @@
             <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"
               target="_blank"><span class="visually-hidden">Кэт энерджи в Инстаграме</span>
               <svg class="social__icon-insta" width="22" height="12">
-                <use xlink:href="#icon-insta"></use>
+                <use xlink:href="img/sprite.svg#icon-insta"></use>
               </svg>
             </a>
           </li>
@@ -217,7 +213,7 @@
             <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"
               target="_blank"><span class="visually-hidden">Кэт энерджи в Фейсбуке</span>
               <svg class="social__icon-fb" width="10" height="19">
-                <use xlink:href="#icon-fb"></use>
+                <use xlink:href="img/sprite.svg#icon-fb"></use>
               </svg>
             </a>
           </li>
@@ -225,10 +221,14 @@
       </div>
       <div class="page-footer__copyright copyright">
         <p class="copyright__text">HTML Academy</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-          target="_blank">
-          <svg class="copyright__icon-htmlacademy" width="26.943" height="34.09">
-            <use xlink:href="#icon-htmlacademy"></use>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="HTML Academy, HTML и CSS, уровень 2" target="_blank">
+          <svg class="copyright__htmlacademy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="35"
+            height="42">
+            <path fill="#666666" d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1
+                    10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7
+                    2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9
+                    1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z" />
           </svg>
         </a>
       </div>
